--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
